--- a/header.html
+++ b/header.html
@@ -8,20 +8,26 @@
         <div class="collapse navbar-collapse" id="nav" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="../../index.html">Home</a>
-                </li>
-                <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="#" data-toggle="dropdown">About Us
+                    <a class="nav-link" href="#" data-toggle="dropdown">Home
                         <span><i class="ti-angle-down"></i></span>
                     </a>
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="about-us.html">About Us </a>
+                        <a class="dropdown-item" href="index.html">Home</a>
+                        <a class="dropdown-item" href="contact.html">Contact Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                        <a class="dropdown-item" href="sales-team.html">Sales</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown dropdown-slide">
+                    <a class="nav-link" href="#">About Us
+                        <span><i class="ti-angle-down"></i></span>
+                    </a>
+                    <!-- Dropdown list -->
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="about-us.html">About Us</a>
                         <a class="dropdown-item" href="our-history.html">Our History</a>
-                        <a class="dropdown-item" href="community.html">Serving Community</a>
-                        <a class="dropdown-item" href="associations.html">Associations</a>
-                        <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
-                        <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+                        <a class="dropdown-item" href="community.html">Giving Back</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
@@ -31,55 +37,17 @@
                     <!-- Dropdown list -->
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="commercial-business.html">Commercial</a>
-                        <a class="dropdown-item" href="industrial-business.html">Industrial</a>
-                        <a class="dropdown-item" href="education.html">Education</a>
                         <a class="dropdown-item" href="healthcare.html">Healthcare</a>
-                        <a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
-                        <a class="dropdown-item" href="#">Energy</a>
                         <a class="dropdown-item" href="agriculture.html">Agriculture</a>
-                        <a class="dropdown-item" href="construction.html">Construction</a>
-                        <a class="dropdown-item" href="financing.html">Financing Program</a>
-                        <!-- <a class="dropdown-item" href="#">DIY</a> -->
+                        <a class="dropdown-item" href="education.html">Education</a>
+                        <a class="dropdown-item" href="government.html">government</a>
                     </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="home-security.html">Residential</a>
                 </li>
-                <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="#" data-toggle="dropdown">Monitoring
-                        <span><i class="ti-angle-down"></i></span>
-                    </a>
-                    <!-- Dropdown list -->
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="home-security.html">Monitoring</a>
-                        <a class="dropdown-item" href="home-security.html">Residential</a>
-                        <a class="dropdown-item" href="commercial.html">Commercial</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="#" data-toggle="dropdown">Government
-                        <span><i class="ti-angle-down"></i></span>
-                    </a>
-                    <!-- Dropdown list -->
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="government.html">Government</a>
-                        <a class="dropdown-item" href="solutions.html">Solutions</a>
-                        <a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
-                        <a class="dropdown-item" href="school-districts.html">School Districts</a>
-                        <a class="dropdown-item" href="security-safety.html">Security and Safety</a>
-                        <a class="dropdown-item" href="partners.html">Partners and Certifications</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="#" data-toggle="dropdown">Contact Us
-                        <span><i class="ti-angle-down"></i></span>
-                    </a>
-                    <!-- Dropdown list -->
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="contact.html">Contact Us</a>
-                        <a class="dropdown-item" href="leadership.html">Leadership</a>
-                        <a class="dropdown-item" href="sales-team.html">Sales Team</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="home-security.html">monitoring</a>
                 </li>
             </ul>
 
@@ -143,7 +111,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="#" data-toggle="dropdown">Home
+                    <span><i class="ti-angle-down"></i></span>
+                </a>
+                <!-- Dropdown list -->
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="index.html">Home</a>
+                    <a class="dropdown-item" href="contact.html">Contact Us</a>
+                    <a class="dropdown-item" href="leadership.html">Leadership</a>
+                    <a class="dropdown-item" href="sales-team.html">Sales</a>
+                </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
                 <a class="nav-link" href="#">About Us
@@ -153,67 +130,27 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="about-us.html">About Us</a>
                     <a class="dropdown-item" href="our-history.html">Our History</a>
-                    <a class="dropdown-item" href="community.html">Serving Community</a>
-                    <a class="dropdown-item" href="associations.html">Associations</a>
-                    <a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+                    <a class="dropdown-item" href="community.html">Giving Back</a>
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="#">Commercial
+                <a class="nav-link" href="#" data-toggle="dropdown">Commercial
                     <span><i class="ti-angle-down"></i></span>
                 </a>
                 <!-- Dropdown list -->
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="commercial-business.html">Commercial</a>
-                    <a class="dropdown-item" href="industrial-business.html">Industrial</a>
-                    <a class="dropdown-item" href="education.html">Education</a>
                     <a class="dropdown-item" href="healthcare.html">Healthcare</a>
-                    <a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
-                    <a class="dropdown-item" href="#">Energy</a>
                     <a class="dropdown-item" href="agriculture.html">Agriculture</a>
-                    <a class="dropdown-item" href="construction.html">Construction</a>
-                    <a class="dropdown-item" href="financing.html">Financing Program</a>
-                    <!-- <a class="dropdown-item" href="#">DIY</a> -->
+                    <a class="dropdown-item" href="education.html">Education</a>
+                    <a class="dropdown-item" href="government.html">government</a>
                 </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="home-security.html">Residential</a>
             </li>
-            <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="#">Monitoring
-                    <span><i class="ti-angle-down"></i></span>
-                </a>
-                <!-- Dropdown list -->
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="home-security.html">Monitoring</a>
-                    <a class="dropdown-item" href="home-security.html">Residential</a>
-                    <a class="dropdown-item" href="commercial.html">Commercial</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="#">Government
-                    <span><i class="ti-angle-down"></i></span>
-                </a>
-                <!-- Dropdown list -->
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="government.html">Government</a>
-                    <a class="dropdown-item" href="solutions.html">Solutions</a>
-                    <a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
-                    <a class="dropdown-item" href="school-districts.html">School Districts</a>
-                    <a class="dropdown-item" href="security-safety.html">Security and Safety</a>
-                    <a class="dropdown-item" href="partners.html">Partners and Certifications</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="#">Contact Us
-                    <span><i class="ti-angle-down"></i></span>
-                </a>
-                <!-- Dropdown list -->
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="contact.html">Contact Us</a>
-                    <a class="dropdown-item" href="leadership.html">Leadership</a>
-                    <a class="dropdown-item" href="sales-team.html">Sales Team</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="home-security.html">monitoring</a>
             </li>
         </ul>
 
