--- a/index.html
+++ b/index.html
@@ -57,20 +57,26 @@
 			<div class="collapse navbar-collapse" id="nav" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="../../index.html">Home</a>
-					</li>
-					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="#" data-toggle="dropdown">About Us
+						<a class="nav-link" href="#" data-toggle="dropdown">Home
 							<span><i class="ti-angle-down"></i></span>
 						</a>
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
-							<a class="dropdown-item" href="about-us.html">About Us </a>
+							<a class="dropdown-item" href="index.html">Home</a>
+							<a class="dropdown-item" href="contact.html">Contact Us</a>
+							<a class="dropdown-item" href="leadership.html">Leadership</a>
+							<a class="dropdown-item" href="sales-team.html">Sales</a>
+						</div>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="#">About Us
+							<span><i class="ti-angle-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="about-us.html">About Us</a>
 							<a class="dropdown-item" href="our-history.html">Our History</a>
-							<a class="dropdown-item" href="community.html">Serving Community</a>
-							<a class="dropdown-item" href="associations.html">Associations</a>
-							<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
-							<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+							<a class="dropdown-item" href="community.html">Giving Back</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
@@ -80,55 +86,17 @@
 						<!-- Dropdown list -->
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="commercial-business.html">Commercial</a>
-							<a class="dropdown-item" href="industrial-business.html">Industrial</a>
-							<a class="dropdown-item" href="education.html">Education</a>
 							<a class="dropdown-item" href="healthcare.html">Healthcare</a>
-							<a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
-							<a class="dropdown-item" href="#">Energy</a>
 							<a class="dropdown-item" href="agriculture.html">Agriculture</a>
-							<a class="dropdown-item" href="construction.html">Construction</a>
-							<a class="dropdown-item" href="financing.html">Financing Program</a>
-							<!-- <a class="dropdown-item" href="#">DIY</a> -->
+							<a class="dropdown-item" href="education.html">Education</a>
+							<a class="dropdown-item" href="government.html">government</a>
 						</div>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="home-security.html">Residential</a>
 					</li>
-					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="#" data-toggle="dropdown">Monitoring
-							<span><i class="ti-angle-down"></i></span>
-						</a>
-						<!-- Dropdown list -->
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="home-security.html">Monitoring</a>
-							<a class="dropdown-item" href="home-security.html">Residential</a>
-							<a class="dropdown-item" href="commercial.html">Commercial</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="#" data-toggle="dropdown">Government
-							<span><i class="ti-angle-down"></i></span>
-						</a>
-						<!-- Dropdown list -->
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="government.html">Government</a>
-							<a class="dropdown-item" href="solutions.html">Solutions</a>
-							<a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
-							<a class="dropdown-item" href="school-districts.html">School Districts</a>
-							<a class="dropdown-item" href="security-safety.html">Security and Safety</a>
-							<a class="dropdown-item" href="partners.html">Partners and Certifications</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="#" data-toggle="dropdown">Contact Us
-							<span><i class="ti-angle-down"></i></span>
-						</a>
-						<!-- Dropdown list -->
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="contact.html">Contact Us</a>
-							<a class="dropdown-item" href="leadership.html">Leadership</a>
-							<a class="dropdown-item" href="sales-team.html">Sales Team</a>
-						</div>
+					<li class="nav-item">
+						<a class="nav-link" href="home-security.html">monitoring</a>
 					</li>
 				</ul>
 	
@@ -192,7 +160,16 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="index.html">Home</a>
+					<a class="nav-link" href="#" data-toggle="dropdown">Home
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="index.html">Home</a>
+						<a class="dropdown-item" href="contact.html">Contact Us</a>
+						<a class="dropdown-item" href="leadership.html">Leadership</a>
+						<a class="dropdown-item" href="sales-team.html">Sales</a>
+					</div>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
 					<a class="nav-link" href="#">About Us
@@ -202,67 +179,27 @@
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="about-us.html">About Us</a>
 						<a class="dropdown-item" href="our-history.html">Our History</a>
-						<a class="dropdown-item" href="community.html">Serving Community</a>
-						<a class="dropdown-item" href="associations.html">Associations</a>
-						<a class="dropdown-item" href="guarantee.html">Customer Guarantee</a>
+						<a class="dropdown-item" href="community.html">Giving Back</a>
 					</div>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="#">Commercial
+					<a class="nav-link" href="#" data-toggle="dropdown">Commercial
 						<span><i class="ti-angle-down"></i></span>
 					</a>
 					<!-- Dropdown list -->
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="commercial-business.html">Commercial</a>
-						<a class="dropdown-item" href="industrial-business.html">Industrial</a>
-						<a class="dropdown-item" href="education.html">Education</a>
 						<a class="dropdown-item" href="healthcare.html">Healthcare</a>
-						<a class="dropdown-item" href="oil-petroleum.html">Oil/Petroleum</a>
-						<a class="dropdown-item" href="#">Energy</a>
 						<a class="dropdown-item" href="agriculture.html">Agriculture</a>
-						<a class="dropdown-item" href="construction.html">Construction</a>
-						<a class="dropdown-item" href="financing.html">Financing Program</a>
-						<!-- <a class="dropdown-item" href="#">DIY</a> -->
+						<a class="dropdown-item" href="education.html">Education</a>
+						<a class="dropdown-item" href="government.html">government</a>
 					</div>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="home-security.html">Residential</a>
 				</li>
-				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="#">Monitoring
-						<span><i class="ti-angle-down"></i></span>
-					</a>
-					<!-- Dropdown list -->
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="home-security.html">Monitoring</a>
-						<a class="dropdown-item" href="home-security.html">Residential</a>
-						<a class="dropdown-item" href="commercial.html">Commercial</a>
-					</div>
-				</li>
-				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="#">Government
-						<span><i class="ti-angle-down"></i></span>
-					</a>
-					<!-- Dropdown list -->
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="government.html">Government</a>
-						<a class="dropdown-item" href="solutions.html">Solutions</a>
-						<a class="dropdown-item" href="contract-vehicles.html">Contract Vehicles</a>
-						<a class="dropdown-item" href="school-districts.html">School Districts</a>
-						<a class="dropdown-item" href="security-safety.html">Security and Safety</a>
-						<a class="dropdown-item" href="partners.html">Partners and Certifications</a>
-					</div>
-				</li>
-				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="#">Contact Us
-						<span><i class="ti-angle-down"></i></span>
-					</a>
-					<!-- Dropdown list -->
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="contact.html">Contact Us</a>
-						<a class="dropdown-item" href="leadership.html">Leadership</a>
-						<a class="dropdown-item" href="sales-team.html">Sales Team</a>
-					</div>
+				<li class="nav-item">
+					<a class="nav-link" href="home-security.html">monitoring</a>
 				</li>
 			</ul>
 	
@@ -321,8 +258,8 @@
 							<a href="covid-19.html"><h3 style="font-weight: 400; font-size: small;">Covid-19 Pandemic Best Practices</h3></a>
 						</div>
 
-						<p class="banner-text">We really do make security easy. <br>
-							Our relationship begins when you click where we can help you.
+						<p class="banner-text">We make security easy. <br>
+							<span class="banner-sub">Our relationship begins when you click where we can help you.</span>
 						</p>
 
 					</div>
@@ -340,31 +277,21 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
+					<a href="home-security.html">
+						<div class='img-container'>
+						<img src="images/residential-3x2.jpg" alt="residential security" />
+						<div class='img-footer'>
+							<p class="image-text">Residential</p>
+						</div>	
+						</div>
+					</a>
+				</div>
+				<div class="col-lg-4 col-md-6">
 					<a href="commercial.html">
 						<div class='img-container'>
 						<img src="images/commercial-3x2.jpg" alt="Commercial security" />
 						<div class='img-footer'>
 							<p class="image-text">Commercial</p>
-						</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<a href="healthcare.html">
-						<div class='img-container'>
-						<img src="images/healthcare-3x2.jpg" alt="health care security" />
-						<div class='img-footer'>
-							<p class="image-text">Health Care</p>
-						</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<a href="agriculture.html">
-						<div class='img-container'>
-						<img src="images/Agricultureadele-payman-3x2.jpg" alt="agriculture security" />
-						<div class='img-footer'>
-							<p class="image-text">Agriculture</p>
 						</div>
 						</div>
 					</a>
@@ -380,14 +307,24 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<!-- <a href="#"> -->
+					<a href="healthcare.html">
 						<div class='img-container'>
-						<img src="images/DIY-3x2.jpg" alt="do it yourself security" />
+						<img src="images/healthcare-3x2.jpg" alt="health care security" />
 						<div class='img-footer'>
-							<p class="image-text"></p>
+							<p class="image-text">Health Care</p>
 						</div>
 						</div>
-					<!-- </a> -->
+					</a>
+				</div>
+				<div class="col-lg-4 col-md-6">
+					<a href="contact.html">
+						<div class='img-container'>
+						<img src="images/DIY-3x2.jpg" alt="agriculture security" />
+						<div class='img-footer'>
+							<p class="image-text">Contact Us</p>
+						</div>
+						</div>
+					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<a href="government.html">
@@ -399,22 +336,24 @@
 						</div>
 					</a>
 				</div>
+				
+				
 				<div class="col-lg-4 col-md-6">
-					<a href="#">
+					<a href="community.html">
 						<div class='img-container'>
-						<img src="images/energy-3x2.jpg" alt="energy systems security" />
+						<img src="images\give-back-3x2.jpg" alt="energy systems security" />
 						<div class='img-footer'>
-							<p class="image-text">Energy</p>
+							<p class="image-text">Giving Back</p>
 						</div>
 						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="home-security.html">
+					<a href="agriculture.html">
 						<div class='img-container'>
-						<img src="images/residential-3x2.jpg" alt="residential security" />
+						<img src="images\Agricultureadele-payman-3x2.jpg" alt="residential security" />
 						<div class='img-footer'>
-							<p class="image-text">Residential Monitoring</p>
+							<p class="image-text">Agriculture</p>
 						</div>	
 						</div>
 					</a>
@@ -423,7 +362,7 @@
 					<a href="commercial.html"><div class='img-container'>
 						<img src="images/commercial-map-3x2.jpg" alt="monitoring security" />
 						<div class='img-footer'>
-							<p class="image-text">Commercial Monitoring</p>
+							<p class="image-text">24hr Monitoring</p>
 						</div>
 					</a>
 				</div>
@@ -457,9 +396,9 @@
 		  <!-- <h5 class="text-uppercase">Links</h5> -->
   
 		  <ul class="list-unstyled footer-link">
-			<li>
+			<!-- <li>
 			  <a href="careers.html">Careers</a>
-			</li>
+			</li> -->
 			<li>
 			  <a href="sitemap.html">Site map</a>
 			</li>
@@ -487,9 +426,9 @@
 			<li>
 			  <a href="contact.html">Contact us</a>
 			</li>
-			<li>
+			<!-- <li>
 			  <a href="financing.html">Financing</a>
-			</li>
+			</li> -->
 			<!-- <li>
 			  <a href="#!">Link 4</a>
 			</li> -->
@@ -546,6 +485,7 @@
   
   </footer>
   <!-- Footer -->
+
 
 
 	<!-- JAVASCRIPTS -->
