--- a/header.html
+++ b/header.html
@@ -7,17 +7,8 @@
         </button>
         <div class="collapse navbar-collapse" id="nav" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown dropdown-slide">
-                    <a class="nav-link" href="#" data-toggle="dropdown">Home
-                        <span><i class="ti-angle-down"></i></span>
-                    </a>
-                    <!-- Dropdown list -->
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="index.html">Home</a>
-                        <a class="dropdown-item" href="contact.html">Contact Us</a>
-                        <a class="dropdown-item" href="leadership.html">Leadership</a>
-                        <a class="dropdown-item" href="sales-team.html">Sales</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
                     <a class="nav-link" href="#">About Us
@@ -48,6 +39,17 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="home-security.html">monitoring</a>
+                </li>
+                <li class="nav-item dropdown dropdown-slide">
+                    <a class="nav-link" href="#" data-toggle="dropdown">Contact Us
+                        <span><i class="ti-angle-down"></i></span>
+                    </a>
+                    <!-- Dropdown list -->
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="contact.html">Contact Us</a>
+                        <a class="dropdown-item" href="leadership.html">Leadership</a>
+                        <a class="dropdown-item" href="sales-team.html">Sales</a>
+                    </div>
                 </li>
             </ul>
 
@@ -110,17 +112,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-            <li class="nav-item dropdown dropdown-slide">
-                <a class="nav-link" href="#" data-toggle="dropdown">Home
-                    <span><i class="ti-angle-down"></i></span>
-                </a>
-                <!-- Dropdown list -->
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="index.html">Home</a>
-                    <a class="dropdown-item" href="contact.html">Contact Us</a>
-                    <a class="dropdown-item" href="leadership.html">Leadership</a>
-                    <a class="dropdown-item" href="sales-team.html">Sales</a>
-                </div>
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
                 <a class="nav-link" href="#">About Us
@@ -151,6 +144,17 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="home-security.html">monitoring</a>
+            </li>
+            <li class="nav-item dropdown dropdown-slide">
+                <a class="nav-link" href="#" data-toggle="dropdown">Contact Us
+                    <span><i class="ti-angle-down"></i></span>
+                </a>
+                <!-- Dropdown list -->
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="contact.html">Contact Us</a>
+                    <a class="dropdown-item" href="leadership.html">Leadership</a>
+                    <a class="dropdown-item" href="sales-team.html">Sales</a>
+                </div>
             </li>
         </ul>
 
