--- a/index.html
+++ b/index.html
@@ -56,17 +56,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="nav" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item dropdown dropdown-slide">
-						<a class="nav-link" href="#" data-toggle="dropdown">Home
-							<span><i class="ti-angle-down"></i></span>
-						</a>
-						<!-- Dropdown list -->
-						<div class="dropdown-menu">
-							<a class="dropdown-item" href="index.html">Home</a>
-							<a class="dropdown-item" href="contact.html">Contact Us</a>
-							<a class="dropdown-item" href="leadership.html">Leadership</a>
-							<a class="dropdown-item" href="sales-team.html">Sales</a>
-						</div>
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
 						<a class="nav-link" href="#">About Us
@@ -97,6 +88,17 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="home-security.html">monitoring</a>
+					</li>
+					<li class="nav-item dropdown dropdown-slide">
+						<a class="nav-link" href="#" data-toggle="dropdown">Contact Us
+							<span><i class="ti-angle-down"></i></span>
+						</a>
+						<!-- Dropdown list -->
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="contact.html">Contact Us</a>
+							<a class="dropdown-item" href="leadership.html">Leadership</a>
+							<a class="dropdown-item" href="sales-team.html">Sales</a>
+						</div>
 					</li>
 				</ul>
 	
@@ -159,17 +161,8 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav">
-				<li class="nav-item dropdown dropdown-slide">
-					<a class="nav-link" href="#" data-toggle="dropdown">Home
-						<span><i class="ti-angle-down"></i></span>
-					</a>
-					<!-- Dropdown list -->
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="index.html">Home</a>
-						<a class="dropdown-item" href="contact.html">Contact Us</a>
-						<a class="dropdown-item" href="leadership.html">Leadership</a>
-						<a class="dropdown-item" href="sales-team.html">Sales</a>
-					</div>
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
 					<a class="nav-link" href="#">About Us
@@ -200,6 +193,17 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="home-security.html">monitoring</a>
+				</li>
+				<li class="nav-item dropdown dropdown-slide">
+					<a class="nav-link" href="#" data-toggle="dropdown">Contact Us
+						<span><i class="ti-angle-down"></i></span>
+					</a>
+					<!-- Dropdown list -->
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="contact.html">Contact Us</a>
+						<a class="dropdown-item" href="leadership.html">Leadership</a>
+						<a class="dropdown-item" href="sales-team.html">Sales</a>
+					</div>
 				</li>
 			</ul>
 	
