--- a/our-history.html
+++ b/our-history.html
@@ -103,15 +103,8 @@
 
 				<hr>
 
-				<h4><small>Call us for a free needs analysis.</small></h4>
-				<h3>Who is protecting you?</h3>
+				<div id="callus"></div>
 
-				<div class="text-center">
-					<h2>Tel-Tec Security Systems</h2>
-					<p>Protecting people and their assets since 1982</p>
-				</div>
-
-                
               </div>
             </div>
           </div>
