--- a/home-security.html
+++ b/home-security.html
@@ -113,17 +113,29 @@
 					Tel-Tec Security offers the best solution to keep your family and home safe and secure. 
 					All of our systems offer 24-hour monitoring, a vital link to local law enforcement and fire departments.
 				</p>
-				<ul>
-					<li>Premium touch pads at one or two doors</li>
-					<li>Alarms all open able doors</li>
-					<li>Chime feature each time a protected door is opened</li>
-					<li>Motion detector</li>
-					<li>Interior siren</li>
-					<li>Exterior sounder</li>
-					<li>Smoke detector</li>
-					<li>Option for heat detector in garage and/or attic</li>
-					<li>Two to four year extended warranty</li>
-				</ul>
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-6">
+							<ul>
+								
+								<li>Basic home security system</li>
+								<li>Custom security systems with home automation</li>
+								<li>Hoop-up existing system to monitoring services</li>
+								<li>Mobile app</li>
+								<li>Smoke detection</li>
+							</ul>
+						</div>
+						<div class="col-sm-6">
+							<ul>
+								<li>Heat detection</li>
+								<li>Health emergency notification</li>
+								<li>Duress / 911</li>
+								<li>Service maintenance agreement</li>
+								<li>Guard response</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 				<hr>
 
 				<h4><small>Options</small></h4>
