--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
                         <a class="dropdown-item" href="healthcare.html">Healthcare</a>
                         <a class="dropdown-item" href="agriculture.html">Agriculture</a>
                         <a class="dropdown-item" href="education.html">Education</a>
-                        <a class="dropdown-item" href="government.html">government</a>
+                        <a class="dropdown-item" href="government.html">Government</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -136,7 +136,7 @@
                     <a class="dropdown-item" href="healthcare.html">Healthcare</a>
                     <a class="dropdown-item" href="agriculture.html">Agriculture</a>
                     <a class="dropdown-item" href="education.html">Education</a>
-                    <a class="dropdown-item" href="government.html">government</a>
+                    <a class="dropdown-item" href="government.html">Government</a>
                 </div>
             </li>
             <li class="nav-item">
