--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<a class="dropdown-item" href="healthcare.html">Healthcare</a>
 							<a class="dropdown-item" href="agriculture.html">Agriculture</a>
 							<a class="dropdown-item" href="education.html">Education</a>
-							<a class="dropdown-item" href="government.html">government</a>
+							<a class="dropdown-item" href="government.html">Government</a>
 						</div>
 					</li>
 					<li class="nav-item">
@@ -185,7 +185,7 @@
 						<a class="dropdown-item" href="healthcare.html">Healthcare</a>
 						<a class="dropdown-item" href="agriculture.html">Agriculture</a>
 						<a class="dropdown-item" href="education.html">Education</a>
-						<a class="dropdown-item" href="government.html">government</a>
+						<a class="dropdown-item" href="government.html">Government</a>
 					</div>
 				</li>
 				<li class="nav-item">
