--- a/education.html
+++ b/education.html
@@ -109,7 +109,7 @@
 								<li>Consulting service with Covid-19 trained staff</li>
 								<li>System engineering / Design and plans</li>
 								<li>Addressable Fire Alarm Systems and repairs</li>
-								<li>Camera surveillance systems – on and off site (cloud)</li>
+								<li>Camera surveillance systems</li>
 								<li>Analytics and reporting for cameras</li>
 								<li>Remote monitoring service for cameras</li>
 								<li>Intrusion alarm with apps</li>
@@ -145,13 +145,7 @@
 				
 				<hr>
 
-				<h4><small>Call us for a free needs analysis.</small></h4>
-				<h3>Who is protecting you?</h3>
-
-				<div class="text-center">
-					<h2>Tel-Tec Security Systems</h2>
-					<p>Protecting people and their assets since 1982</p>
-				</div>
+				<div id="callus"></div>
 
                 
               </div>
