--- a/government.html
+++ b/government.html
@@ -181,7 +181,7 @@
                     <li>Consulting service with Covid-19 trained staff</li>
                     <li>System engineering / Design and plans</li>
                     <li>Addressable Fire Alarm Systems and repairs</li>
-                    <li>Camera surveillance systems – on and off site (cloud)</li>
+                    <li>Camera surveillance systems</li>
                     <li>Analytics and reporting for cameras</li>
                     <li>Remote monitoring service for cameras</li>
                     <li>Intrusion alarm with apps</li>
