--- a/home-security.html
+++ b/home-security.html
@@ -96,7 +96,7 @@
                 <!-- <h2>I Love Food</h2> -->
                 <!-- <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
                 <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br> -->
-                <p>Tel-Tec Security provides full-service, complete security systems and monitoring for retail and commercial businesses. From specialized keyless entry systems to video surveillance and off-site monitoring, we have the technology and expertise to design and install a system that meets your needs.</p>
+                <p>Tel-Tec Security provides full-service, complete security systems and monitoring for residential business. From specialized keyless entry systems to video surveillance and off-site monitoring, we have the technology and expertise to design and install a system that meets your needs.</p>
 				<hr>
                 
                 <h4><small>24-Hour Monitoring</small></h4>
@@ -150,13 +150,7 @@
 				</ul>
 				<hr>
 
-				<h4><small>Call us for a free needs analysis.</small></h4>
-				<h3>Who is protecting you?</h3>
-
-				<div class="text-center">
-					<h2>Tel-Tec Security Systems</h2>
-					<p>Protecting people and their assets since 1982</p>
-				</div>
+				<div id="callus"></div>
 
                 
               </div>
