--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="about-us.html">About Us</a>
 							<a class="dropdown-item" href="our-history.html">Our History</a>
-							<a class="dropdown-item" href="community.html">Giving Back</a>
+							<a class="dropdown-item" href="giving-back.html">Giving Back</a>
 						</div>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
@@ -172,7 +172,7 @@
 					<div class="dropdown-menu">
 						<a class="dropdown-item" href="about-us.html">About Us</a>
 						<a class="dropdown-item" href="our-history.html">Our History</a>
-						<a class="dropdown-item" href="community.html">Giving Back</a>
+						<a class="dropdown-item" href="giving-back.html">Giving Back</a>
 					</div>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
@@ -343,7 +343,7 @@
 				
 				
 				<div class="col-lg-4 col-md-6">
-					<a href="community.html">
+					<a href="giving-back.html">
 						<div class='img-container'>
 						<img src="images\give-back-3x2.jpg" alt="energy systems security" />
 						<div class='img-footer'>
