--- a/commercial-business.html
+++ b/commercial-business.html
@@ -119,7 +119,7 @@
 								<li>Consulting service with Covid-19 trained staff</li>
 								<li>System engineering / Design and plans</li>
 								<li>Addressable Fire Alarm Systems and repairs</li>
-								<li>Camera surveillance systems – on and off site (cloud)</li>
+								<li>Camera surveillance systems</li>
 								<li>Analytics and reporting for cameras</li>
 								<li>Remote monitoring service for cameras</li>
 								<li>Intrusion alarm with apps</li>
@@ -153,15 +153,8 @@
 				<p>In a retail operation, prevention is the key to avoiding shoplifting and inventory loss. Ask us about designing a system to deter these activities ? stopping the problem in its tracks.</p>
 				<hr>
 
-				<h4><small>Call us for a free needs analysis.</small></h4>
-				<h3>Who is protecting you?</h3>
+				<div id="callus"></div>	
 
-				<div class="text-center">
-					<h2>Tel-Tec Security Systems</h2>
-					<p>Protecting people and their assets since 1982</p>
-				</div>
-
-                
               </div>
             </div>
           </div>
