--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="about-us.html">About Us</a>
                         <a class="dropdown-item" href="our-history.html">Our History</a>
-                        <a class="dropdown-item" href="community.html">Giving Back</a>
+                        <a class="dropdown-item" href="giving-back.html">Giving Back</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
@@ -123,7 +123,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="about-us.html">About Us</a>
                     <a class="dropdown-item" href="our-history.html">Our History</a>
-                    <a class="dropdown-item" href="community.html">Giving Back</a>
+                    <a class="dropdown-item" href="giving-back.html">Giving Back</a>
                 </div>
             </li>
             <li class="nav-item dropdown dropdown-slide">
