--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="commercial.html">
+					<a href="commercial-business.html">
 						<div class='img-container'>
 						<img src="images/commercial-3x2.jpg" alt="Commercial security" />
 						<div class='img-footer'>
@@ -363,8 +363,8 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="commercial.html"><div class='img-container'>
-						<img src="images/commercial-map-3x2.jpg" alt="monitoring security" />
+					<a href="home-security.html"><div class='img-container'>
+						<img src="images/24hr-monitoring.png" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">24hr Monitoring</p>
 						</div>
@@ -385,7 +385,7 @@
 	<div class="container-fluid text-center text-md-left footer-container">
   
 	  <!-- Grid row -->
-	  <div class="row">
+	  <div class="row divider">
   
 		<!-- Grid column -->
 		
@@ -394,12 +394,12 @@
 		<hr class="clearfix w-100 d-md-none pb-3">
   
 		<!-- Grid column -->
-		<div class="col-md-3 mb-md-0 mb-3">
+		<div class="col-md-4 mb-md-0 mb-3">
   
 		  <!-- Links -->
 		  <!-- <h5 class="text-uppercase">Links</h5> -->
   
-		  <ul class="list-unstyled footer-link">
+		  <ul class="list-unstyled footer-link pl-5 ml ml-2">
 			<!-- <li>
 			  <a href="careers.html">Careers</a>
 			</li> -->
@@ -418,12 +418,12 @@
 		<!-- Grid column -->
   
 		<!-- Grid column -->
-		<div class="col-md-3 mb-md-0 mb-3">
+		<div class="col-md-4 mb-md-0 mb-3">
   
 		  <!-- Links -->
 		  <!-- <h5 class="text-uppercase">Links</h5> -->
   
-		  <ul class="list-unstyled footer-link">
+		  <ul class="list-unstyled footer-link pl-5 ml-4">
 			<li>
 			  <a href="terms-of-use.html">Terms of Use</a>
 			</li>
@@ -441,15 +441,15 @@
 		</div>
 		<!-- Grid column -->
   
-		<div class="col-md-6 mt-md-0 mt-3">
+		<div class="col-md-4 mt-md-0 mt-3 pr-3 mb-3">
   
 			<!-- Content -->
 			<div class="footer-content">
 			<h5 class="text-uppercase">Need Help?</h5>
-			<p>We're available 24/7 at 1-661-397-5511</p>
+			<p>Available 24/7 at 1-661-397-5511</p>
 			</div>
 
-			<div class="container">
+			<!-- <div class="container">
 			<div class="row footer-icon">
 			  <div class="col-lg-2 col-6 text-center mb-3">
 				  <img src="images/cms.png" alt="">
@@ -471,14 +471,41 @@
 				  <a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/bbb.png" alt=""></a>
 			  </div>
 		  </div>
-		  </div>
+		  </div> -->
 	
+		  </div> <!-- end grid column -->
+
+	  </div> <!-- end row -->
+	  <!-- Grid row -->
+
+	  <div class="row">
+		  
+			<div class="row footer-icon col-md-12">
+				<div class="col-lg-2 col-6 text-center mb-3">
+					<img src="images/cms.png" alt="">
+				</div>
+  
+				<div class="col-lg-2 col-6 text-center mb-3">
+				  <img src="images/voip-trans-footer.png" alt="">
+				</div>
+	
+				<div class="col-lg-2 col-6 text-center mb-3">
+					<img src="images/CMAS-trans-footer.png" alt="">
+				</div>
+	
+				<div class="col-lg-2 col-6 text-center mb-3">
+					<img src="images/GSA-logo-trans-footer.png" alt="">
+				</div>
+	
+				<div class="col-lg-2 col-6 text-center mb-3">
+					<a href="https://www.bbb.org/us/ca/bakersfield/profile/burglar-alarm-systems/tel-tec-security-systems-inc-1066-80000799"><img src="images/bbb.png" alt=""></a>
+				</div>
+			
 		  </div>
 
 	  </div>
-	  <!-- Grid row -->
   
-	</div>
+	</div> <!-- end container-fluid -->
 	<!-- Footer Links -->
   
 	<!-- Copyright -->
