--- a/header.html
+++ b/header.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="home-security.html">Residential</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="home-security.html">monitoring</a>
+                    <a class="nav-link" href="monitoring.html">monitoring</a>
                 </li>
                 <li class="nav-item dropdown dropdown-slide">
                     <a class="nav-link" href="#" data-toggle="dropdown">Contact Us
@@ -143,7 +143,7 @@
                 <a class="nav-link" href="home-security.html">Residential</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="home-security.html">monitoring</a>
+                <a class="nav-link" href="monitoring.html">monitoring</a>
             </li>
             <li class="nav-item dropdown dropdown-slide">
                 <a class="nav-link" href="#" data-toggle="dropdown">Contact Us
