--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<a class="nav-link" href="home-security.html">Residential</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="home-security.html">monitoring</a>
+						<a class="nav-link" href="monitoring.html">monitoring</a>
 					</li>
 					<li class="nav-item dropdown dropdown-slide">
 						<a class="nav-link" href="#" data-toggle="dropdown">Contact Us
@@ -192,7 +192,7 @@
 					<a class="nav-link" href="home-security.html">Residential</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="home-security.html">monitoring</a>
+					<a class="nav-link" href="monitoring.html">monitoring</a>
 				</li>
 				<li class="nav-item dropdown dropdown-slide">
 					<a class="nav-link" href="#" data-toggle="dropdown">Contact Us
@@ -363,7 +363,7 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-6">
-					<a href="home-security.html"><div class='img-container'>
+					<a href="monitoring.html"><div class='img-container'>
 						<img src="images/24hr-monitoring.png" alt="monitoring security" />
 						<div class='img-footer'>
 							<p class="image-text">24hr Monitoring</p>
