--- a/giving-back.html
+++ b/giving-back.html
@@ -95,6 +95,29 @@
 
 				<hr>
 
+				<h4><small>Leaders in Life</small></h4>
+				<p>In 1998, local businessman Morgan Clayton approached the Kern County Network for Children
+					about establishing a premier youth conference in Kern County.
+					Planning began in the fall of 1999 with about 35 students who brainstormed and developed the
+					first conference held in February 2000.
+					In 20 years of the conference, approximately 40,000 students and adult chaperones have
+					attended.</p>
+                <br>
+                <p>About 1,340 students have participated on the planning committee over 20 years.
+					Selected students are invited to also serve on the Executive Committee and receive additional
+					leadership development through the California Association of Student Councils (see
+					www.casc.net – a nationally recognized program for training youth leaders for over 60 years).
+					Student planners, guided by adult advisors, attend monthly general planning meetings; each
+					student also participates in one of four working subcommittees: Workshops & Speakers,
+					Marketing & Fundraising, Resource Fair and Venue & Logistics.</p>
+                <br>
+                <p>The Conference has been sustained through the community outreach and the fund raising
+					efforts of Morgan Clayton and the Kern County Superintendent of Schools and by the active
+					involvement of youth on the planning committee.</p>
+
+
+				<hr>
+
 				<h4><small>Associations</small></h4>
 
 				<!-- <h2>I Love Food</h2> -->
