--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -154,13 +154,7 @@
                 <hr>
                 <br>
                 
-				<h4><small>Call us for a free needs analysis.</small></h4>
-				<h3>Who is protecting you?</h3>
-
-				<div class="text-center">
-					<h2>Tel-Tec Security Systems</h2>
-					<p>Protecting people and their assets since 1982</p>
-				</div>
+                <div id="callus"></div>
 
                 
               </div>
